
5.2b1 -> 5.3a1
    - jbj: rpmsql: stub-in an "expand" function tied to macro expansion.
    - jbj: rpmsql: resurrect building --without-sqlite.
    - jbj: sqlite: stub-in a framework for creating functions.
    - jbj: sqlite: add a "sqlite3" executable linked against external -lsqlite.
    - jbj: sqlite: INTERACTIVE chrome buffing to add helpful prompt nags.
    - jbj: sqlite: haul out the construction scaffholding trash.
    - jbj: sqlite: return the output as the macro expansion value.
    - jbj: dbsql: incremental step toward the desired rpmsql object API.
    - jbj: rpmsql: add rc checking for sqlite3_foo() calls (a la rpmrepo.c).
    - jbj: dbsql: disembowel tools/dbsql.c and push the offal into rpmsql.c.
    - jbj: dbsql: send spewage to stdout or append to an iob, as needed.
    - jbj: dbsql: move popt tables into -lrpmo for use by rpmsql ctor.
    - jbj: dbsql: refatoring to get an rpmsql object passed on callbacks.
    - jbj: dbsql: use popt for CLI processing.
    - jbj: swipe sql/sqlite/src/shell.c -> tools/dbsql.c, prep for popt surgery.
    - jbj: sqlite: stub-in an sqlite3 embedding.
    - jbj: dbtool: include db_log_verify too.
    - jbj: rpmdb: handle the db_sql -> db_sql_codegen renaming in 5.0.21.
    - jbj: rpmdb: remove db-3.x.y, add db-5.0.21, changes.
    - jbj: nix: stub-in rpmnix{Env,Hash,Instantiate,Store,Worker} noop methods.
    - jbj: nix: refactor xiu-hash/xiu-instantiate/xiu-store popt tables.
    - jbj: nix: use the refactored popt tables in -lrpmio.
    - jbj: nix: stub-in the '%{nix foo ...:}' macro expansion embedding.
    - jbj: nix: handle both "nix-foo" and "nix foo" invocations in rpmnix ctor.
    - jbj: nix: refactor popt tables into -lrpmio.
    - jbj: nix: avoid deadlock, live with a leak, for rpmnix object. todo++.
    - jbj: ispras: stub in macro configuration attaching automated ISPRAS tests.
    - jbj: fix: don't display usage with "rpm -v", it clutters --eval output.