@@ -1,0 +1,40 @@
+.read ref/rpmdb.sql
+CREATE TABLE Packages (
+  i	INTEGER UNIQUE PRIMARY KEY NOT NULL,
+  h	BLOB NOT NULL
+);
+CREATE TEMP TRIGGER insert_Packages AFTER INSERT ON Packages
+  BEGIN
+    INSERT INTO Nvra (k,v)	VALUES ( new.h, new.rowid );
+  END;
+CREATE TEMP TRIGGER delete_Packages BEFORE DELETE ON Packages
+  BEGIN
+    DELETE FROM Nvra WHERE v = old.rowid;
+  END;
+CREATE TABLE Nvra (
+  k	TEXT PRIMARY KEY NOT NULL,
+  v	INTEGER REFERENCES Packages(i) ON UPDATE RESTRICT ON DELETE RESTRICT
+);
+BEGIN TRANSACTION;
+INSERT into Packages (h) VALUES ('bing-1.2-3.noarch');
+INSERT into Packages (h) VALUES ('bang-4.5-6.noarch');
+INSERT into Packages (h) VALUES ('boom-7.8.9.noarch');
+COMMIT TRANSACTION;
+SELECT * from Packages;
+1|bing-1.2-3.noarch
+2|bang-4.5-6.noarch
+3|boom-7.8.9.noarch
+SELECT * from Nvra;
+bing-1.2-3.noarch|1
+bang-4.5-6.noarch|2
+boom-7.8.9.noarch|3
+BEGIN TRANSACTION;
+DELETE FROM Packages WHERE i = 2;
+COMMIT TRANSACTION;
+SELECT * from Packages;
+1|bing-1.2-3.noarch
+3|boom-7.8.9.noarch
+SELECT * from Nvra;
+bing-1.2-3.noarch|1
+boom-7.8.9.noarch|3
+.exit
